日志输出更新